Main layout upload#2

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
     </header>
     <main>
         <div>
-            <h1>Main heading</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit molestiae, id eos voluptatem minima quod rerum dolor vitae veniam expedita distinctio modi harum cum qui soluta autem et hic quaerat!</p>
-            <a href="#">LEARN MORE</a>
+            CONTENT
         </div>
         <img src="./img/Freelancer.webp" alt="Freelancer">
     </main>
