--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelancer</title>
     <style>
+
+        body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
         header {
             display: inline-block;
             width: 1000px;
@@ -19,6 +24,10 @@
 
         header>nav {
             float: right;
+        }
+
+        nav>a {
+            display: inline-block;
         }
 
         .icon {
@@ -45,7 +54,9 @@
             Left icon
         </div>
         <nav>
-            LINKS
+            <a href="#">HOME</a>
+            <a href="#">WORK</a>
+            <a href="#">ABOUT US</a>
         </nav>
         <div>SEARCH FORM</div>
     </header>
