--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer</title>
+    <title>Freelancar</title>
     <style>
 
         body {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family:Arial, Helvetica, sans-serif;
         }
 
         header {
             display: inline-block;
-            width: 1000px;
+            width: 700px;
             margin-top: 150px;
-            margin-left: calc((100% - 1000px) / 2); /*--must be spaces between math operators*/
+            margin-left: calc((100% - 700px) / 2); /*--must be spaces between math operators*/
         }
 
         header>div {
@@ -34,16 +34,64 @@
             float: left;
         }
 
+        /*-----------------------------------------------------*/
+
         main {
             display: inline-block;
-            width: 1000px;
+            width: 700px;
             margin-top: 10px;
-            margin-left: calc((100% - 1000px) / 2);
+            margin-left: calc((100% - 700px) / 2);
         }
 
+        main>div {
+            width:38%;
+            float: left;
+        }
+
+        h1 {
+            font-size: 50px;
+            color: #F76E5E;
+            margin-left: 10px;
+            margin-top: 50px;
+        }
+
+        p {
+            font-size: 12px;
+            letter-spacing: ;
+            line-height: 1.3em;
+            margin-left: 10px;
+        }
+
+        main>div>a {
+            margin-left: 10px;
+            margin-top: 10px;
+            margin-bottom: 40px;
+            display: inline-block;
+            border-radius: 25px;
+            padding: 7px;
+            padding-left: 20px;
+            padding-right: 20px;
+            font-size: 13px;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: white;
+            background-color: #F76E5E;
+            box-shadow: 0 15px 8px -10px #DEA6CD;
+            transition: all 0.5s;
+        }
+
+        main>div>a:hover {
+            background-color: #7C39AC;
+        }
+
+        div>div>a {
+            margin-left: 10px;
+        }
+ 
         img {
+            width: 62%;
             float: right;
-            width: 600px;
+            width: 400px;
         }
 
     </style>
@@ -62,7 +110,14 @@
     </header>
     <main>
         <div>
-            CONTENT
+            <h1>Freelancar</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi praesentium error facere cumque similique ex possimus quidem eius, ...!</p>
+            <a href="#">Learn more</a>
+            <div>
+                <a href="#">Fb</a>
+                <a href="#">?</a>
+                <a href="#">G+</a>
+            </div>
         </div>
         <img src="./img/Freelancer.webp" alt="Freelancer">
     </main>
