Content HTML and CSS updates

--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelancar</title>
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
+
 </head>
 <body>
-    <header>
-        <div class="icon">
-            Left icon
-        </div>
-        <nav>
-            <a href="#">HOME</a>
-            <a href="#">WORK</a>
-            <a href="#">ABOUT US</a>
+    <header class="main-header">
+        <a class="menu-bar fa fa-bars" href="#"></a>
+        <nav class="main-nav">
+            <a class="link" href="#">HOME</a>
+            <a class="link" href="#">WORK</a>
+            <a class="link" href="#">ABOUT US</a>
+            <input class="search-bar" type="text">
         </nav>
-        <div>SEARCH FORM</div>
     </header>
-    <main>
-        <div>
-            <h1>Freelancar</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi praesentium error facere cumque similique ex possimus quidem eius, ...!</p>
-            <a href="#">Learn more</a>
-            <div>
-                <a href="#">Fb</a>
-                <a href="#">?</a>
-                <a href="#">G+</a>
+    <main class="main-content">
+        <div class="left-column">
+            <h1 class="main-title">Freelancar</h1>
+            <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id temporibus minus sint in quaerat? Veritatis exercitationem nihil neque dolorem laudantium! Quia, ...!</p>
+            <a class="btn" href="#">Learn more</a>
+            <div class="socials">
+                <a class="icon fa fa-facebook" href="#"></a>
+                <a class="icon fa fa-instagram" href="#"></a>
+                <a class="icon fa fa-google-plus" href="#"></a>
             </div>
         </div>
-        <img src="./img/Freelancer.webp" alt="Freelancer">
+        <img class="right-column" src="./img/Freelancer.webp" alt="Freelancer">
     </main>
 </body>
 </html>
